--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -36,8 +36,8 @@
 
         <div class="icon-1"><img src="../IMG/Cap 1/icono-1.jpg"></div>
 
-        <div class="text-1"><p>Para comenzar a hablar de la historia de Ar
-            menia y de su geografía debemos hacer 
+        <div class="text-1"><p>Para comenzar a hablar de la historia de Armenia
+             y de su geografía debemos hacer 
             primeramente una aclaración: al hablar de 
             Armenia Histórica nos referimos a un territorio 
             mucho más extenso que lo que hoy se conoce por 
@@ -46,9 +46,9 @@
             Histórica, está ubicada en los confines orientales 
             de ésta y comprende sólo 29.793 kms cuadrados. 
             El resto se halla repartido entre Turquía, Irán, 
-            Azerbaiyán y Georgia. La antigua provincia ar
-            menia de Artsaj, al este de la meseta de Arme
-            nia, constituye, después de la guerra librada con 
+            Azerbaiyán y Georgia. La antigua provincia armenia
+             de Artsaj, al este de la meseta de Armenia,
+             constituye, después de la guerra librada con 
             Azerbaiyán por su independencia –entre 1991 y 
             1994– una república independiente de facto, no 
             reconocida aún por la comunidad internacional.
@@ -60,11 +60,11 @@
             tratégica fue invadida, ocupada y disputada desde 
             la Antigüedad y su pueblo debió sobrellevar un 
             destino de guerras y luchas para mantener su vida 
-            y su identidad y forjó un carácter indómito y or
-            gulloso de su ser nacional, orgullo que, también, 
+            y su identidad y forjó un carácter indómito y orgulloso
+             de su ser nacional, orgullo que, también, 
             persiste en su diáspora, formada a través de los 
-            siglos como consecuencia de las migraciones pro
-            ducidas por las numerosas invasiones sufridas, y 
+            siglos como consecuencia de las migraciones producidas
+             por las numerosas invasiones sufridas, y 
             acrecentada enormemente a principios del siglo 
             XX como consecuencia del genocidio llevado a 
             cabo por el estado turco</p></div>
@@ -79,28 +79,28 @@
                 volcánica que se alza a unos mil metros sobre el 
                 nivel del mar, sobre la falla de Anatolia y a ésto 
                 se debieron los frecuentes terremotos que sufrió 
-                a lo largo de la historia y que aún siguen regis
-                trándose, como el de 1988, con epicentro cerca 
+                a lo largo de la historia y que aún siguen registrándose,
+                 como el de 1988, con epicentro cerca 
                 de Spitak, al noroeste de la república de Armenia, 
-                que fue devastador ya que fueron destruídas va
-                rias ciudades y murieron treinta mil personas.
+                que fue devastador ya que fueron destruídas varias
+                 ciudades y murieron treinta mil personas.
                  La cadena montañosa del Ponto separa la meseta 
-                de Armenia del mar Negro; y la cadena del Pe
-                queño Cáucaso, de Georgia, formando el límite 
+                de Armenia del mar Negro; y la cadena del Pequeño
+                 Cáucaso, de Georgia, formando el límite 
                 norte de la república de Armenia. La cadena del 
                 Antitauro la separa de Siria y Mesopotamia y 
                 conecta con la cadena del Zagros y la meseta de 
                 Irán que forma el límite sudeste de la meseta de 
                 Armenia. El Éufrates constituye el límite oeste; 
-                el Caspio, el límite este. Las numerosas cordille
-                ras que surcan el territorio lo convierten en una
+                el Caspio, el límite este. Las numerosas cordilleras
+                 que surcan el territorio lo convierten en una
                 verdadera fortaleza natural, un “país de piedra” 
                 o karastán –en armenio–, al mismo tiempo que 
                 demarcan regiones, separándolas, hecho que tuvo 
                 consecuencias políticas determinantes a lo largo 
                 de la historia armenia.
-                 El pico más alto es el Ararat –Masís para los ar
-                menios– con 5165 mts. Desde la firma del trata
+                 El pico más alto es el Ararat –Masís para los armenios– con
+                  5165 mts. Desde la firma del trata
                 do de Kars entre Turquía y Rusia, en 1921, este 
                 símbolo de la identidad armenia está en poder de 
                 Turquía que le cambió el nombre por Agri Dagh. 
@@ -193,16 +193,16 @@
                         altas montañas de cumbres nevadas, está regado 
                         por ríos torrentosos que en la primavera, al de
                         rretirse la nieve, bajan por profundas gargantas 
-                        de peñascos, irrigando a su paso los valles, ferti
-                        lizándolos, haciéndolos aptos para la agricultura 
+                        de peñascos, irrigando a su paso los valles, fertilizándolos,
+                         haciéndolos aptos para la agricultura 
                         y ofreciendo posibilidades para el desarrollo de 
                         la energía hidroeléctrica. El Tigris y el Éufrates 
                         nacen en las montañas de Armenia, recorren el 
                         extenso territorio conocido como Mesopotamia y 
                         se vuelcan en el golfo Pérsico. El Arax, que en un 
                         tramo marca, actualmente, el límite entre Turquía 
-                        y Armenia, nace en el monte Bingol, cerca de Er
-                        zerum, hace un extenso recorrido, surca y riega 
+                        y Armenia, nace en el monte Bingol, cerca de Erzerum,
+                         hace un extenso recorrido, surca y riega 
                         la llanura del Ararat, marca el límite con Irán, </p></div>
 
                         <div class="foto-5"><img src="../IMG/Cap 1/foto-6.png"></div>
@@ -258,38 +258,38 @@
 
                              <div class="text-1"><p> se une al río Kur en Azerbaiyán y desemboca en 
                                 el mar Caspio. Constituyó un importante medio 
-                                de comunicación y de comercio y una vía de pe
-                                netración de pueblos invasores. Está prevista la 
-                                construcción de una importante planta hidroeléc
-                                trica sobre el río Arax, en la frontera con Irán, que 
+                                de comunicación y de comercio y una vía de penetración 
+                                de pueblos invasores. Está prevista la 
+                                construcción de una importante planta hidroeléctrica 
+                                sobre el río Arax, en la frontera con Irán, que 
                                 será un emprendimiento conjunto armenio iraní.  
                                 En el territorio de la república de Armenia, el río 
                                 Hrazdán, tributario del Arax, atraviesa la capital 
-                                Ereván. Sobre él se han construido varias repre
-                                sas y estaciones hidroeléctricas que proveen de 
-                                energía al país. También en Armenia, son  tributa
-                                rios del Arax los ríos Arpá, Kasaj, Azad, Vorodán 
+                                Ereván. Sobre él se han construido varias represas
+                                 y estaciones hidroeléctricas que proveen de 
+                                energía al país. También en Armenia, son  tributarios 
+                                del Arax los ríos Arpá, Kasaj, Azad, Vorodán 
                                 y Ajurian. 
-                                Otro río que tiene sus nacientes en Armenia His
-                                tórica, cerca de Kars, es el Kur o Kurá. Desde allí 
+                                Otro río que tiene sus nacientes en Armenia Histórica,
+                                 cerca de Kars, es el Kur o Kurá. Desde allí 
                                 se dirige hacia el este, hacia Georgia y luego a 
                                 Azerbaiyán donde se le une el Arax. El río Debet, 
                                 que riega la hermosa región de Tavush, al norte 
                                 de Armenia, es su tributario.
                             
-                                Además de infinidad de pequeños lagos de mon
-                                taña, hay tres lagos grandes en el territorio de Ar
+                                Además de infinidad de pequeños lagos de montaña,
+                                 hay tres lagos grandes en el territorio de Ar
                                 menia Histórica. El más importante es el de Van, 
                                 al sudeste de la actual Turquía. Su alto contenido 
                                 de bórax hace que sus aguas no sean aptas para el 
                                 riego. En la república de Armenia, el lago Seván, 
                                 llamado antiguamente Kegham, se halla a 1916 
-                                mts sobre el nivel del mar y hoy está en una si
-                                tuación preocupante como consecuencia del des
-                                censo de sus aguas. La superficie actual del lago 
+                                mts sobre el nivel del mar y hoy está en una situación
+                                 preocupante como consecuencia del descenso de sus aguas.
+                                  La superficie actual del lago 
                                 disminuyó en la última década y se espera que 
-                                con la construcción de los túneles Arpá y Voro
-                                dán, que vuelcan las aguas de esos ríos al lago, y 
+                                con la construcción de los túneles Arpá y Vorodán,
+                                 que vuelcan las aguas de esos ríos al lago, y 
                                 el uso racional de las mismas, aumente su  nivel 
                                 y se salven las especies en peligro de extinción.  
                                 También formaba parte de la Armenia Histórica 
