--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -69,7 +69,8 @@
             XX como consecuencia del genocidio llevado a 
             cabo por el estado turco</p></div>
 
-            <div class="map-1"><img src="../IMG/Cap 1/map-1.png"></div>
+            <a href="./mapas-ampliados/mapas-ampliados-responsive.html">
+                <div class="map-1"> <img src="../IMG/Cap 1/map-1.png"></div></a>
 
             <div class="separation-line"></div>
 
