--- a/Capitulo-1/mapas-ampliados/mapas-ampliados-responsive.html
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados-responsive.html
@@ -10,7 +10,7 @@
     <section>
 
         <div class="map-1">
-          <img src="./mapas-ampliados/mapas/map-1.png" alt="">  
+          <img src="./mapas-ampliados/mapas/map-1.png" alt="" class="map-1-center">  
         </div>
 
 
