--- a/Capitulo-1/mapas-ampliados/mapas-ampliados-responsive.html
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados-responsive.html
@@ -10,7 +10,7 @@
     <section>
 
         <div class="map-1">
-        <a href="../indexCapitulo1.html"> <img src="./mapas-ampliados/mapas/map-1.png" alt="" class="map-1-center"></a>   
+        <a href="../indexCapitulo1.html#map1-scroll"> <img src="./mapas-ampliados/mapas/map-1.png" alt="" class="map-1-center"></a>   
         </div>
 
 
