--- a/Capitulo-1/mapas-ampliados/mapas-ampliados-responsive.html
+++ b/Capitulo-1/mapas-ampliados/mapas-ampliados-responsive.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARMENIA</title>
     <link rel="stylesheet" href="./mapas-ampliados/CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
 </head>
 <body>
     <section>
 
         <div class="map-1">
-        <a href="../indexCapitulo1.html#map1-scroll"> <img src="./mapas-ampliados/mapas/map-1.png" alt="" class="map-1-center"></a>   
+        <a href="../indexCapitulo1.html#map1-scroll"><div class="close"> <i class="bi bi-x-circle"></i></div><img src="./mapas-ampliados/mapas/map-1.png" alt="" class="map-1-center"></a>   
         </div>
 
 
