--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -69,8 +69,17 @@
             XX como consecuencia del genocidio llevado a 
             cabo por el estado turco</p></div>
 
-            <a href="./mapas-ampliados/mapas-ampliados-responsive.html" id="map1-scroll">
-                <div class="map-1"> <img src="../IMG/Cap 1/map-1.png"></div></a>
+
+            
+                <div class="map-1" id="map1-scroll"><img src="../IMG/Cap 1/map-1.png"></div>
+
+
+                     <div class="ampliar-map" >
+                        <a href="./mapas-ampliados/mapas-ampliados-responsive.html" >
+                        
+                        Ampliar mapa</a></div>
+
+
 
             <div class="separation-line"></div>
 
