--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -151,7 +151,7 @@
 
                 <div class="foto-3"><img src="../IMG/Cap 1/foto-3.png"></div>
                 <div class="epigr-1">
-                    <p>   foto3: 
+                    <p>   Foto 3: 
                         columnas de basalto, en el 
                         cañón del río Azad. El sitio, 
                         conocido como Sinfonía de 
@@ -215,7 +215,7 @@
                          hace un extenso recorrido, surca y riega 
                         la llanura del Ararat, marca el límite con Irán, </p></div>
 
-                        <div class="foto-5"><img src="../IMG/Cap 1/foto-6.png"></div>
+                        <div class="foto-35"><img src="../IMG/Cap 1/foto-6.png"></div>
 
                         <div class="epigr-1">
                             <p>  foto 6: ríos
@@ -307,6 +307,34 @@
                                 aguas muy saladas que no permiten la existencia 
                                 de peces.</p></div>
 
+                                <div class="foto-10"><img src="../IMG/Cap 1/foto-10.png"></div>
+
+                                <div class="epigr-1">
+                                    <p>    Foto 10: lago Van 
+                                        e isla de Ajtamar, donde 
+                                        se alza la hermosa iglesia 
+                                        de Santa Cruz, del siglo X, 
+                                        enteramente cubierta de 
+                                        relieves y que era parte de 
+                                        un palacio y de un complejo 
+                                        religioso, de los cuales no 
+                                        queda absolutamente nada.
+                                          
+                                     </p></div>
+
+                              <div class="foto-11"><img src="../IMG/Cap 1/foto-11.png"></div>
+
+                              <div class="epigr-1">
+                                <p>    Foto 11: lago Van, 
+                                    isla Ktuts o Karpanak. Allí, 
+                                    como en las otras cuatro 
+                                    islas del lago, se había
+                                     construido un monasterio 
+                                    del que solo quedan las 
+                                    ruinas de la iglesia de San 
+                                    Juan, del siglo XII.
+                                      
+                                 </p></div>
 
 
         </div>
