--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -543,7 +543,8 @@
             de irrigación desarrollado 
             por la civilización urartú, 
             desde el siglo IX a.C, se 
-            plantaron viñ
+            plantaron viñedos
+            y huertas.
               
          </p></div>
 
