--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -327,13 +327,13 @@
                                      <p class="destacados-titulo"> La navegación por los ríos de Armenia en la Antigüedad<p> 
                                        
                                      <p>“Voy a referir una cosa que… es para mí la mayor de todas las maravillas de aquella tierra. Los barcos 
-                                        en que navegan río abajo hacia Babilonia, son de forma redonda y están hechos de cuero. Los habi
-                                        tantes de Armenia, pueblo situado arriba de los asirios, fabrican las costillas del barco con varas de 
+                                        en que navegan río abajo hacia Babilonia, son de forma redonda y están hechos de cuero.
+                                         Los habitantes de Armenia, pueblo situado arriba de los asirios, fabrican las costillas del barco con varas de 
                                         sauce, y por la parte exterior las cubren extendiendo sobre ellas unas pieles, que sirven de piso… va 
                                         dentro, por lo menos, un burro vivo y en los mayores van muchos. Luego que han llegado a Babilonia 
                                         y despachado la carga, pregonan para la venta las costillas y armazón del barco… Cargan después en 
-                                        sus burros los cueros y parten con ellos para la Armenia, porque es del todo imposible volver nave
-                                        gando río arriba a causa de la rapidez de la corriente”.</p>
+                                        sus burros los cueros y parten con ellos para la Armenia, porque es del todo imposible volver
+                                     navegando río arriba a causa de la rapidez de la corriente”.</p>
                        
                       <p class="destacados-autor">HERODOTO, Los Nueve Libros de la Historia, Libro I, cap. CXCIV.<p>
                                         </div></div>
