--- a/Capitulo-1/indexCapitulo1.html
+++ b/Capitulo-1/indexCapitulo1.html
@@ -36,7 +36,7 @@
 
         <div class="icon-1"><img src="../IMG/Cap 1/icono-1.jpg"></div>
 
-        <div class="text-1"><p class="first-letter">Para comenzar a hablar de la historia de Armenia
+        <div class="text-1"><p>Para comenzar a hablar de la historia de Armenia
              y de su geografía debemos hacer 
             primeramente una aclaración: al hablar de 
             Armenia Histórica nos referimos a un territorio 
