--- a/index.html
+++ b/index.html
@@ -238,12 +238,70 @@
                          </div>
 
 
-                    <div class="subcontainer-2">
+                    <div class="subcontainer-3">
 
                             <h4>Hidrografía</h4>
 
-                    </div>
+                    
 
+                    <p>El territorio de Armenia Histórica, atravesado por 
+                        altas montañas de cumbres nevadas, está regado 
+                        por ríos torrentosos que en la primavera, al de
+                        rretirse la nieve, bajan por profundas gargantas 
+                        de peñascos, irrigando a su paso los valles, ferti
+                        lizándolos, haciéndolos aptos para la agricultura y 
+                        ofreciendo posibilidades para el desarrollo de 
+                        la energía hidroeléctrica. El Tigris y el Éufrates 
+                        nacen en las montañas de Armenia, recorren el 
+                        extenso territorio conocido como Mesopotamia y 
+                        se vuelcan en el golfo Pérsico. El Arax, que en un 
+                        tramo marca, actualmente, el límite entre Turquía 
+                        y Armenia, nace en el monte Bingol, cerca de Er
+                        zerum, hace un extenso recorrido, surca y riega 
+                        la llanura del Ararat, marca el límite con Irán,
+                        se une al río Kur en Azerbaiyán y desemboca en 
+                        el mar Caspio. Constituyó un importante medio 
+                        de comunicación y de comercio y una vía de pe
+                        netración de pueblos invasores. Está prevista la 
+                        construcción de una importante planta hidroeléc
+                        trica sobre el río Arax, en la frontera con Irán, que 
+                        será un emprendimiento conjunto armenio iraní.  
+                        En el territorio de la república de Armenia, el río 
+                        Hrazdán, tributario del Arax, atraviesa la capital 
+                        Ereván. Sobre él se han construido varias repre
+                        sas y estaciones hidroeléctricas que proveen de 
+                        energía al país. También en Armenia, son  tributa
+                        rios del Arax los ríos Arpá, Kasaj, Azad, Vorodán 
+                        y Ajurian. 
+                        Otro río que tiene sus nacientes en Armenia His
+                        tórica, cerca de Kars, es el Kur o Kurá. Desde allí 
+                        se dirige hacia el este, hacia Georgia y luego a 
+                        Azerbaiyán donde se le une el Arax. El río Debet, 
+                        que riega la hermosa región de Tavush, al norte 
+                        de Armenia, es su tributario.
+                    
+                        Además de infinidad de pequeños lagos de mon
+                        taña, hay tres lagos grandes en el territorio de Ar
+                        menia Histórica. El más importante es el de Van, 
+                        al sudeste de la actual Turquía. Su alto contenido 
+                        de bórax hace que sus aguas no sean aptas para el 
+                        riego. En la república de Armenia, el lago Seván, 
+                        llamado antiguamente Kegham, se halla a 1916 
+                        mts sobre el nivel del mar y hoy está en una si
+                        tuación preocupante como consecuencia del des
+                        censo de sus aguas. La superficie actual del lago 
+                        disminuyó en la última década y se espera que 
+                        con la construcción de los túneles Arpá y Voro
+                        dán, que vuelcan las aguas de esos ríos al lago, y 
+                        el uso racional de las mismas, aumente su  nivel 
+                        y se salven las especies en peligro de extinción.  
+                        También formaba parte de la Armenia Histórica 
+                        el lago Urmiá, localizado actualmente en Irán, de 
+                        aguas muy saladas que no permiten la existencia 
+                        de peces.</p>
+
+
+                    </div>
 
                 </div>
 
