--- a/index.html
+++ b/index.html
@@ -507,6 +507,85 @@
 
                 </div>
 
+
+                <div class="subcontainer-4">
+
+                    <h4>Suelo y clima</h4>
+
+
+                    <p>La ubicación de la meseta de Armenia en un si
+                        tio en donde convergen tres áreas biogeográficas 
+                        diferentes –la caucásica, la persa y la mediterránea–
+                        hace que el paisaje ofrezca grandes contras
+                        tes y una gran diversidad de flora y fauna. Por un
+                        lado, altas montañas de nieves eternas y estepas; 
+                        y por otro, fértiles llanuras, de las cuales solo las 
+                        de Shiraz y Ararat forman parte de la república 
+                        de Armenia. Las de Alashkert, Manazkert, Mush,
+                        Jarpert y Garín, que pertenecían a la Armenia 
+                        Histórica, actualmente integran  Turquía, y las de 
+                        Sharur y Najicheván fueron anexadas por Azer
+                        baiyán. Después de la guerra con Azerbaiyán, la 
+                        llanura de Garapagh pasó a ser parte de la repúbli
+                        ca de Nagorno Garapagh. A través de la historia, 
+                        la llanura del Ararat fue la región más densamente 
+                        poblada y donde se situaron las capitales históricas 
+                        de Armenia: Armavir, Iervantashat, Ardashat, 
+                        Tvín, Vagharshapat y Ereván. <br><br>
+                         Esta geografía difícil, en donde  se alternan mon
+                        tañas, estepas áridas y abruptas pendientes ayudó 
+                        a forjar el carácter rudo y sufrido de sus habitan
+                        tes, carácter que los ayudó a sobrellevar los terri
+                        bles acontecimientos de su larga historia. 
+                        El clima es variado. Los inviernos son largos y 
+                        severos con temperaturas muy bajas y mucha nie
+                        ve y los veranos cortos y cálidos. Esto permitió el 
+                        desarrollo de una gran biodiversidad en la flora y 
+                        la fauna.<br><br>
+                         En cuanto a las posibilidades para la agricultura, 
+                        si bien el tiempo apto para cultivar es breve, esto 
+                        está compensado por la fertilidad de los suelos de 
+                        tierras negras de origen volcánico y por la creación
+                         de un complejo sistema de irrigación, dise
+                        ñado y construido por la civilización urartú, en 
+                        el siglo IX a.C. Estas condiciones posibilitan una 
+                        rápida germinación y se pueden obtener excelen
+                        tes cosechas de diferentes tipos de cereales, arroz, 
+                        algodón, olivo, vid y variedad de frutas como el 
+                        damasco, que los romanos llevaron a Europa. En 
+                        las tierras altas, no aptas para el cultivo pero cu
+                        biertas de pasto y abundantes hierbas, la principal 
+                        actividad es el pastoreo de cabras y ovejas.
+                        El clima seco y los vientos erosionan el suelo y 
+                        lo desertifican y, por ello, desde la Antigüedad se 
+                        plantaron extensas zonas con árboles. En el siglo 
+                        IV, el rey Josrov mandó crear dos bosques para 
+                        ser utilizados en las cacerías reales, que hoy son 
+                        parte de una Reserva Estatal –la Reserva Josrov–. 
+                        Se encuentran en el marz –provincia– de Ararat, 
+                        en el centro de Armenia y cuentan con antiquí
+                        simos ejemplares de robles, fresnos y especies 
+                        silvestres.
+                        En el noreste de Armenia, en las regiones de Lorí 
+                        y Tavush, con frecuentes lluvias, los bosques son 
+                        muy abundantes y la zona tiene un aspecto muy 
+                        alpino, diferente al del resto del país. Los bosques 
+                        y arboledas que hacia la Edad Media cubrían el 
+                        40% y en las últimas décadas el 25% del suelo del país,
+                         sufrieron graves daños entre 1991 y 
+                        1994, por la depredación humana ante la falta de 
+                        combustible durante la guerra de Garapagh y hoy 
+                        apenas llegan a cubrir el 8% del territorio. Varias 
+                        fundaciones y ONGs del país y de la diáspora –el 
+                        Armenia Tree Project, por ejemplo– tratan de re
+                        vertir la deforestación plantando árboles</p>
+
+
+                </div>
+
+
+
+
             </section>
 
 
