--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 trándose, como el de 1988, con epicentro cerca 
                                 de Spitak, al noroeste de la república de Armenia, 
                                 que fue devastador ya que fueron destruídas va
-                                rias ciudades y murieron treinta mil personas.
+                                rias ciudades y murieron treinta mil personas.<br><br>
                                  La cadena montañosa del Ponto separa la meseta 
                                 de Armenia del mar Negro; y la cadena del Pe
                                 queño Cáucaso, de Georgia, formando el límite 
@@ -102,7 +102,7 @@
                                 o karastán –en armenio–, al mismo tiempo que 
                                 demarcan regiones, separándolas, hecho que tuvo 
                                 consecuencias políticas determinantes a lo largo 
-                                de la historia armenia.
+                                de la historia armenia.<br><br>
                                  El pico más alto es el Ararat –Masís para los ar
                                 menios– con 5165 mts. Desde la firma del trata
                                 do de Kars entre Turquía y Rusia, en 1921, este 
