--- a/index.html
+++ b/index.html
@@ -617,6 +617,27 @@
 
                     </div>
 
+                    <h4>Recursos minerales </h4>
+
+
+                    <p> La región posee yacimientos de oro, plata, hierro, 
+                        zinc, cobre, estaño, bórax, obsidiana, molibde
+                        no, silicatos y minas de sal. Esta gran riqueza de 
+                        minerales permitió el desarrollo de la metalurgia 
+                        desde tiempos remotos y Armenia fue uno de los 
+                        lugares donde, por primera vez en la historia de 
+                        la humanidad, se fundió el bronce. Se hacían úti
+                        les de labranza, arneses, carros de guerra, cascos 
+                        y escudos. También abundan los materiales de 
+                        construcción: mármoles, basalto, granito y, espe
+                        cialmente, toba o duf, una piedra volcánica en va
+                        rios colores y muy fácil de trabajar. Esto facilitó 
+                        el desarrollo de la arquitectura y, desde épocas 
+                        tempranas, los pobladores de la región fueron há
+                        biles constructores e ingenieros.</p>
+
+
+
 
                 </div>
 
